MDEV-16594 ALTER DATA DIRECTORY in PARTITIONS of InnoDB storage does nothing silently

InnoDB intentionally (it's a documented behavior) ignores changing of
DATA DIRECTORY and INDEX DIRECTORY for partitions. This patch adds a warning
when this happens.